# supreme-spoon

./: README.md  emp.bpmn  pyproject.toml
examples/: emp.py  emp.spiff.py  man_pg.bpmn  man_pg.py  man_pg.spiff.py  pg.bpmn  pg.py  pg.spiff.py  spoon.py
examples/copybpmn/: copybpmn.bpmn  copybpmn.py  main.py
examples/empty/: run.py
examples/empty/bpmn/: empty.bpmn
examples/move_bpmn/: copybpmn.py  main.py  move_bpmn.bpmn  move_bpmn.py  run.py
examples/parallel_gateway/: run.py
examples/parallel_gateway/bpmn/: parallel_gateway.bpmn
examples/parallel_gateway_manual/: run.py
examples/parallel_gateway_manual/bpmn/: parallel_gateway_manual.bpmn
old_examples/: emp.spiff.py  man_pg.bpmn  man_pg.spiff.py  pg.spiff.py
supreme_spoon/: compile.py  emit.py  util.py
supreme_spoon/backend/: python_cps.py  python_csp.py
supreme_spoon/bpmn/: spoon.bpmn
supreme_spoon/frontend/: bpmn.py
